sfdx-spa-alcala/force-app/main/default/objects/Class_Offering__c/Class_Offering__c.object-meta.xml
<CustomObject>
    <description>The Class Offering object joins Classes and Terms to contain information related to a single
occurrence of a class. Information about the date of the class, primary faculty, and location
would be included in this object.</description>
    <label>Class Offering</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Class Offering ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>