sfdx-spa-alcala/force-app/main/default/objects/Class_Offering__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <formula>text(Term__r.Term_Name__c) &amp;&quot;-&quot;&amp;
text(Term__r.Term_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Term</label>
    <type>Text</type>
</CustomField>