sfdx-spa-alcala/force-app/main/default/objects/Class_Offering__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <formula>ClassID__r.Class_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>