sfdx-spa-alcala/force-app/main/default/objects/Class_Offering__c/fields/ClassID__c.field-meta.xml
<CustomField>
    <fullName>ClassID__c</fullName>
    <label>Class ID</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Offerings</relationshipLabel>
    <relationshipName>Class_Offerings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>