sfdx-spa-alcala/force-app/main/default/objects/Class_Offering__c/fields/Primary_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Primary_Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Faculty</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Offerings</relationshipLabel>
    <relationshipName>Classes_Taught</relationshipName>
    <type>Lookup</type>
</CustomField>