sfdx-spa-alcala/force-app/main/default/objects/Class_Offering__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term ID</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Class Offerings</relationshipLabel>
    <relationshipName>Class_Offerings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>