sfdx-spa-alcala/force-app/main/default/objects/Class_Offering__c/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <formula>Term__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>