sfdx-spa-alcala/force-app/main/default/objects/Class_Offering__c/listViews/All_Class_Offerings.listView-meta.xml
<ListView>
    <fullName>All_Class_Offerings</fullName>
    <columns>NAME</columns>
    <columns>Academic_Term__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Primary_Faculty__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Class Offerings</label>
</ListView>